[update] 去除失效方法。